@@ -115,7 +115,7 @@ REFIT_CONFIG GlobalConfig = {
     /* PreferUGA = */ FALSE,
     /* SupplyNVME = */ FALSE,
     /* SupplyAPFS = */ TRUE,
-    /* SupplyUEFI = */ TRUE,
+    /* SupplyUEFI = */ FALSE,
     /* SilenceAPFS = */ TRUE,
     /* SyncAPFS = */ TRUE,
     /* NvramProtect = */ TRUE,
